--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 </head>
 <body>
     <h1 class="title">Asteroids</h1>
-    <script src="https://cdn.jsdelivr.net/npm/phaser@3.15.1/dist/phaser.min.js"></script>
-    <script type="module" src="./main.js"></script>
+    <script src="/phaser.js"></script>
+    <script type="module" src="/main.js"></script>
 </body>
